--- a/_config.yaml
+++ b/_config.yaml
@@ -1,16 +1,16 @@
 # site properties and page defaults
-title: huaxiaoji123DESCRIPTION=An engaging 1-3 sentence description of your lab.
+title: 金胡杨战队
 subtitle: 
-description: 
+description: 隶属于新疆工程学院控制工程学院的RoboMaster战队
 header: images/background.jpg
 header-video: images/bgvideo.mp4
 footer: images/background.jpg
 proofer: false
-slogan: 一往无前华科行，气壮山河狼牙名
+slogan: 坚韧不拔，胡杨不朽
 # site social media and other links
 links:
-  email: contact@huaxiaoji123DESCRIPTION=An engaging 1-3 sentence description of your lab..com
-  github: huaxiaoji123DESCRIPTION=An engaging 1-3 sentence description of your lab.
+  email: 3389359775@qq.com
+  github: //
   bilibili: "475402455"
   wechat: https://mp.weixin.qq.com/s/Zrk4PRRGSimJG9bVDj3Zsg
 ## jekyll settings
